--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ dotenv = "0.14.1"
 reqwest = "0.9.19"
 serde_json = "1.0.40"
 ethereum-types = "0.6.0"
+serial_test_derive = "0.1"
+
+[dev-dependencies]
+serial_test = "0.1"
