--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2018"
 [dependencies]
 hex = "0.3.2"
 serde = "1.0.97"
+docopt = "1.1.0"
 dotenv = "0.14.1"
 reqwest = "0.9.19"
 serde_json = "1.0.40"
+serde_derive = "1.0.94"
 ethereum-types = "0.6.0"
 serial_test_derive = "0.1"
 
