--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde = "1.0.97"
 docopt = "1.1.0"
 dotenv = "0.14.1"
 reqwest = "0.9.19"
+tiny-keccak = "1.5.0"
 serde_json = "1.0.40"
 serde_derive = "1.0.94"
 ethereum-types = "0.6.0"
