chore(packages): <- adds some of those

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,13 @@ rlp = "0.4.2"
 serde = "1.0.97"
 docopt = "1.1.0"
 dotenv = "0.14.1"
+hash-db = "0.15.0"
 reqwest = "0.9.19"
+memory-db = "0.15.0"
 tiny-keccak = "1.5.0"
 serde_json = "1.0.40"
 serde_derive = "1.0.94"
+keccak-hasher = "0.15.0"
 ethereum-types = "0.6.0"
 serial_test_derive = "0.1"
 
